--- a/404.html
+++ b/404.html
@@ -22,19 +22,20 @@ background-attachment: fixed;">
 </div>
 <div style="clear: both;"></div>
 <h1 style="text-align: center;color:#EE2C2C;font-size:50px">だが 断る（搭嘎，口头哇路）</h1>
-<h1 style="text-align: center;color:black;">90%：你瞎搞糊搞来的</h1>
-<h1 style="text-align: center;color:black;">10%：这个网站有问题，请联系我！</h1>
+<h1 style="text-align: center;color:black;">95%：你瞎搞胡搞来的</h1>
+<h1 style="text-align: center;color:black;">5%：这个网站有问题，请联系我！</h1>
 <h1 style="text-align: center;color:black;"><a href="./index.html" style="color: green">点击此处</a>回到主页</h1>
 <h1 style="text-align: center;color:black;"><a href="#" onClick="javascript :history.back(-1);" style="color: green">点击此处</a>回到上一页</h1>
 <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+<hr>
 <style>
-.a1 a{color:#999999}
-body{text-align:center;color:#999999} 
-footer{ background:#595959;padding:10px 0 10px 0} 
+	.webfoot a{color:white}
+	.webfoot footer{color:white;line-height:50px;}
 </style>
-<footer><div class="a1"><a href="https://lzexmpoane.github.io/opensourcecode/" target="_blank">Open Source Code</a> - <a href="https://github.com/lzexmpoane" target="_blank">lzexmpoane</a></footer>
-<footer>1929973351@qq.com - huloubo123@gmail.com</div></footer>
-<footer id="cr">Create Date : 2020/3/3</footer>
+<div class="webfoot">
+	<footer style="text-align:center;"><b>&copy;&nbsp;<a href="https://lzexmpoane.github.io/opensourcecode/">lzexmpoane</a>&nbsp;|&nbsp;Powered by <a href="https://github.com/">GITHUB</a></b></footer>
+	<footer id="cr" style="text-align:center;"><b>Create Date : 2020/3/3</b></footer>
+</div>
 </body>
 <script type="text/javascript">
     function getQinMingJieDate() {
