--- a/annh/devlog.html
+++ b/annh/devlog.html
@@ -1,11 +1,14 @@
-<!DOCTYPE HTML>
-<head>
+<!DOCTYPE HTML><head>
 	<meta charset="UTF-8">
 	<title>Open Source Code - 开发日志</title>
 </head>
+
 <h1><div style="color:black;font-size:40px">Open Source Code - 开发日志</div></h1>
 <h1>（最后实现的在最前面）</h1>
 <p><a href="#" onClick="javascript :history.back(-1);">返回</a></p>
+<h2>2020/5/17/周日</h2>
+<p>Open Source Code升至v0.8</p>
+<p>OSC系统：大改版</p>
 <h2>2020/4/12/周日</h2>
 <p>OSC系统：改了很多地方</p>
 <h2>2020/4/7/星期二</h2>
