--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html lang="sv">
 <!-- 代码的确不工整，emmmmm，也许是我的编辑器的问题吧（之前用的EditPlus，现在用的Sublime Text，再让我用EditPlus是不可能用的，这辈子都不会用EditPlus的（真香预警），Sublime Text比那破玩意好用dōu喽，用的个个都是人才，界面又好看，我qiāo喜欢用的喔！（嗯哼）） -->
 <head>
 	<link rel="icon" href="./favicon/favicon.png" type="image/x-icon">
@@ -14,6 +15,12 @@
 		a{text-decoration:none}
 		a:hover{text-decoration:none}
 	</style>
+	<style media="screen,print">
+	iframe {
+		margin:0 0 1em;
+		border:0;
+	}
+	</style> 
 </head>
 <!-- #CDA776 -->
 <!-- <body bgcolor="#CDA776"> -->
@@ -23,33 +30,32 @@ background-size:100% 100%;
 background-attachment: fixed;">
 	<div>
 		<h1 style="color:black;font-size:50px;text-align: center;margin: 0px; padding: 0px;">Open Source Code</h1>
-		<h3 id="version_" style="color:black;font-size:15px;text-align: center;">Open Source Code Version : v0.0&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Created by <a href="https://github.com/lzexmpoane" target="_blank" style="color: black;">lzexmpoane</a></h3>
+		<h3 id="version_" style="color:black;font-size:15px;text-align: center;">Open Source Code Version : v0.0&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Created by <a href="https://github.com/lzexmpoane" target="_blank" style="color: black;">lzexmpoane</a></h3>
 	</div>
-	<div id="ifr" style="display:block;">
-		<h1><div style="color:black;text-align:center;clear:both"><a href="./mainw.html" target="Window1">主页</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./resource.html" target="Window1">资源
-		</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./forum.html" target="Window1">论坛</a></div></h1>
-		<iframe src="./mainw.html" id="iframeContent" name="Window1" width="75%" height="2000" frameborder="0" scrolling="auto"></iframe>
+	<div id="ifr" style="display:block;text-align:center;">
+		<h1><div style="color:black;clear:both"><a href="./mainw.html" target="Window1">主页</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./resource.html" target="Window1">资源
+		</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./forum.html" target="Window1">论坛</a></div></h1>
+		<iframe src="./mainw.html" id="iframeContent" name="Window1" height="1700px" width="75%" frameborder="0" scrolling="auto"></iframe>
 	</div>
 	<div id="qmj" style="display:none;">
 		<h1 style="font-size:60px;color: black;">清明节，为所有的英雄致敬！</h1>
 		<h1 style="font-size:60px;color: black;">OpenSourceCode 停止提供所有资源！</h1>
 		<h1 style="color: black;text-align: right;">lzexmpoane&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h1>
-	</div>	
-	<style>
-		.a1 a{color:#999999}
-		body{text-align:center;color:#999999} 
-		footer{ background:#595959;padding:10px 0 10px 0}
-	</style>
-	<div class="a1">
-		<footer><a href="https://lzexmpoane.github.io/opensourcecode/" target="_blank">Open Source Code</a> - <a href="https://github.com/lzexmpoane" target="_blank">lzexmpoane</a></footer>
-		<footer>1929973351@qq.com - huloubo123@gmail.com</footer>
 	</div>
-	<footer id="cr">Create Date : 2020/3/3</footer>
+	<hr>
+	<style>
+		.webfoot a{color:white}
+		.webfoot footer{color:white;line-height:50px;}
+	</style>
+	<div class="webfoot">
+		<footer style="text-align:center;"><b>&copy;&nbsp;<a href="https://lzexmpoane.github.io/opensourcecode/">lzexmpoane</a>&nbsp;|&nbsp;Powered by <a href="https://github.com/">GITHUB</a></b></footer>
+		<footer id="cr" style="text-align:center;"><b>Create Date : 2020/3/3</b></footer>
+	</div>
 </body>
 <script type="text/javascript" src="./OSC.js"></script>
 <script type="text/javascript">
 	Logo();
-	Version=0.7;
+	Version=0.8;
 	document.getElementById('version_').innerHTML="Open Source Code Version : v"+Version+"&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Created by <a href=\"https://github.com/lzexmpoane\">lzexmpoane</a>";
 </script>
 <script type="text/javascript" src="./datething.js"></script>
@@ -105,3 +111,4 @@ background-attachment: fixed;">
 	}
 	setInterval("getQinMingJieDate();",10);
 </script>
+</html>
