--- a/mainw.html
+++ b/mainw.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML>
-<head>
+<!DOCTYPE HTML><head>
 	<meta charset="UTF-8">
 	<title>Open Source Code - 主页</title>
 </head>
+
 <h1><div style="color:black;font-size:40px;float:left">Open Source Code - 主页</div></h1>
 <script type="text/javascript">
 	function getD1(){
@@ -16,7 +16,7 @@
 </script>
 <strong><div style="color:black;font-size:30px;text-align:right" id="times"></div></strong>
 <div style="clear:both"></div>
-<h2 style="color:#EE2C2C">注：手机可能会有排版错误；Github在国外，加载慢</h2>
+<h2 style="color:#EE2C2C">注：请不要使用手机打开此网站；加载慢の原因：服务器在国外</h2>
 <h2 id="todaynews" style="color:yellow;">今日新鲜事：</h2>
 <hr>
 <h2>网站简介（建议改为：奇 怪 的 时 间 减 少 了 ！）：</h2>
@@ -43,12 +43,12 @@
 <hr>
 <h2>我其他的网站</h2>
 <h3>一个我以前建的网站（在凡科建站上建的，乱七八糟的东西一大堆。。。）：<a href="https://huloubo.icoc.bz/" style="color:blue;font-size:20px;text-align:center" target="_blank">https://huloubo.icoc.bz/</a></h3>
-<p>&nbsp</p>
+<p>&nbsp;</p>
 <h2>网站合集</h2>
 <h3>Addog（找网站的网站）：<a href="https://www.addog.vip/" style="color:blue;font-size:20px;text-align:center" target="_blank">https://www.addog.vip/</a></h3>
 <h3>Anywhere Anything（找网站的网站）：<a href="http://demo.jb51.net/js/2016/html5_AnywhereAnything/" style="color:blue;font-size:20px;text-align:center" target="_blank">http://demo.jb51.net/js/2016/html5_AnywhereAnything/</a></h3>
 <h3>百度（搜索网站）：<a href="https://www.baidu.com/" style="color:blue;font-size:20px;text-align:center" target="_blank">https://www.baidu.com/</a></h3>
-<h3>Bilibili（B站，看视频的，没有广告的二次元网站）：<a href="https://www.bilibili.com/" style="color:blue;font-size:20px;text-align:center" target="_blank">https://www.bilibili.com/</a></h3>
+<h3>Bilibili（B站，没有广告看视频的二次元网站）：<a href="https://www.bilibili.com/" style="color:blue;font-size:20px;text-align:center" target="_blank">https://www.bilibili.com/</a></h3>
 <h3>谷歌（搜索网站）<s>（Need VPN）</s>：<a href="https://www.google.com/" style="color:blue;font-size:20px;text-align:center" target="_blank">https://www.google.com/</a></h3>
 <h3>Panzoid（视频片头制作网站）：<a href="https://panzoid.com/" style="color:blue;font-size:20px;text-align:center" target="_blank">https://panzoid.com/</a></h3>
 <h3>Sandspiel（沙画？）：<a href="https://sandspiel.club/" style="color:blue;font-size:20px;text-align:center" target="_blank">https://sandspiel.club/</a></h3>
