--- a/resource.html
+++ b/resource.html
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML>
-<head>
+<!DOCTYPE HTML><head>
     <meta charset="UTF-8">
     <title>Open Source Code - 资源</title>
 </head>
+
 <h1><div style="color:black;font-size:40px">Open Source Code - 资源</div></h1>
+<h2 style="color:#EE2C2C">为了软件维护版权，只给出官网地址，均不存储在数据库（注意是软件）</h2>
 <h2><a href="./resh/code.html">代码库</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./resh/game.html">游戏</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="./resh/software.html">软件</a></h2>
