--- a/forumh/E/E2/Howtobeayxh.html
+++ b/forumh/E/E2/Howtobeayxh.html
@@ -25,8 +25,7 @@
 <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;· 西瓜视频</h3>
 <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;· 百度视频</h3>
 <h3>&nbsp;&nbsp;&nbsp;&nbsp;不要在有很多明白人的网站传视频，不然很容易被封</h3>
-<h3>&nbsp;&nbsp;&nbsp;&nbsp;下面的网站不建议上传营销视频：</h3>
-<h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;· A站</h3>
+<h3>&nbsp;&nbsp;&nbsp;&nbsp;以下网站不建议上传营销视频：</h3>
 <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;· B站</h3>
 <h2>三、制作视频软件</h2>
 <h3>&nbsp;&nbsp;&nbsp;&nbsp;营销号制作视频不需要什么专业的软件，</h3>
