--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ background-attachment: fixed;">
 		.webfoot footer{color:white;line-height:50px;}
 	</style>
 	<div class="webfoot">
-		<footer style="text-align:center;"><b>&copy;&nbsp;<a href="https://lzexmpoane.github.io/opensourcecode/">lzexmpoane</a>&nbsp;|&nbsp;Powered by <a href="https://github.com/">GITHUB</a></b></footer>
-		<footer id="cr" style="text-align:center;"><b>Create Date : 2020/3/3</b></footer>
+		<footer style="text-align:center;"><b>&copy;&nbsp;<a href="https://lzexmpoane.github.io/opensourcecode/">lzexmpoane</a>&nbsp;|&nbsp;Hosted on <a href="https://github.com/">GitHub</a></b></footer>
+		<footer id="cr" style="text-align:center;"><b>Created on 3/3/2020</b></footer>
 	</div>
 </body>
 <script type="text/javascript" src="./OSC.js"></script>
