--- a/mainw.html
+++ b/mainw.html
@@ -20,7 +20,7 @@
 <h2 id="todaynews" style="color:yellow;">今日新鲜事：</h2>
 <hr>
 <h2>网站简介（建议改为：奇 怪 的 时 间 减 少 了 ！）：</h2>
-<h3>Open Source Code (OSC)  一个托管在<a href="https://baike.baidu.com/item/github/10145341?fr=aladdin" target="_blank">GitHub</a>上的网站（不是恰饭，它没有给我打钱...）。这个网站具体用来干什么我也不知道...额...？所以你读的这行字只是在浪费你的时间，它只是用来凑字数的，我打了半天，所以我已经浪费了很多的时间，呃...那为什么我有时间来打这一行字呢？第一，用来凑字数很容易可以想到对不对，诶；那么第二呢，它是让这个网站看起来更饱满，诶，对不对；第三，它是用来浪费你的时间（此处应该有一个花屏...在脑海里浮现出来）。额，不是的，是用来学到更多无用（划掉）的知识，让你学会读懂这句话，诶（此处应该再来一个花屏...想好了吗，我们继续浪费时间）额，我已经浪费了7分钟13秒了，你读了这句话你浪费了多少时间，写到这，我又浪费了1分钟36秒了，的确是浪费时间的一段话呢！:D</h3>
+<h3>Open Source Code (OSC)  一个托管在<a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">GitHub</a>上的网站（不是恰饭，它没有给我打钱...）。这个网站具体用来干什么我也不知道...额...？所以你读的这行字只是在浪费你的时间，它只是用来凑字数的，我打了半天，所以我已经浪费了很多的时间，呃...那为什么我有时间来打这一行字呢？第一，用来凑字数很容易可以想到对不对，诶；那么第二呢，它是让这个网站看起来更饱满，诶，对不对；第三，它是用来浪费你的时间（此处应该有一个花屏...在脑海里浮现出来）。额，不是的，是用来学到更多无用（划掉）的知识，让你学会读懂这句话，诶（此处应该再来一个花屏...想好了吗，我们继续浪费时间）额，我已经浪费了7分钟13秒了，你读了这句话你浪费了多少时间，写到这，我又浪费了1分钟36秒了，的确是浪费时间的一段话呢！:D</h3>
 <p>&nbsp;</p>
 <h2><a href="./annh/ann.html">网站公告</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./annh/devp.html">开发计划</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./annh/devlog.html">开发日志</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./annh/refer.html">参考名单</a></h2>
 <p>&nbsp;</p>
@@ -28,7 +28,7 @@
 <p style="display:inline-block">AV</p>
 <textarea id="avid" style="width:100;height:20px;font-size:15px">73267982</textarea>
 <button onclick="document.getElementById('bvid').innerHTML = avtobv(document.getElementById('avid').value)">转换</button>
-<p id="bvid"><a href="https://www.bilibili.com/video/BV1UE411y7Wy" target="_blank">BV1UE411y7Wy</a></p>
+<p id="bvid"><a href="https://www.bilibili.com/video/bv1UE411y7Wy" target="_blank">bv1UE411y7Wy</a></p>
 <p>&nbsp;</p>
 <h2>搜索</h2>
 <select id="seachtype" style="display:inline-block;position:absolute;height:25px;">
@@ -57,7 +57,7 @@
 <h2>联系方式</h2>
 <h3>网站问题、服务器卡顿、建议、合作（没有人会干的）、发布文件等都可以通过邮箱发送给我</h3>
 <h3>我的邮箱：1929973351@qq.com</h3>
-<h3>你也可以关注我的BiliBili&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号：<a href="https://space.bilibili.com/234113877">https://space.bilibili.com/234113877</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名字：lzexmpoane</h3>
+<h3>你也可以关注我的BiliBili&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号：<a href="https://space.bilibili.com/234113877" target="_blank">https://space.bilibili.com/234113877</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名字：lzexmpoane</h3>
 <script type="text/javascript" src="./avidtobvid.js"></script>
 <script type="text/javascript" src="./datething.js"></script>
 <script type="text/javascript">
