--- a/mainw.html
+++ b/mainw.html
@@ -16,7 +16,7 @@
 </script>
 <strong><div style="color:black;font-size:30px;text-align:right" id="times"></div></strong>
 <div style="clear:both"></div>
-<h2 style="color:#EE2C2C">注：请不要使用手机打开此网站；加载慢の原因：服务器在国外</h2>
+<h2 style="color:#EE2C2C">注：不建议使用手机打开此网站；加载慢の原因：服务器在国外</h2>
 <h2 id="todaynews" style="color:yellow;">今日新鲜事：</h2>
 <hr>
 <h2>网站简介（建议改为：奇 怪 的 时 间 减 少 了 ！）：</h2>
